align graph select right * causes issues with panel drawn out of bounds

--- a/src/app/domains/statistics/statistics.page.scss
+++ b/src/app/domains/statistics/statistics.page.scss
@@ -22,6 +22,7 @@
 
   &__statistics-filter {
     form {
+      display: flex;
       flex-direction: row;
       align-items: baseline;
 
@@ -35,6 +36,10 @@
 
       mat-form-field.short-width {
         max-width: 6rem;
+      }
+
+      mat-form-field:last-child {
+        margin-left: auto;
       }
     }
 
